<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        tools:context=".ui.register.SignUpFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:layoutDirection="ltr"
            android:src="@drawable/sport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/blue" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/make_account"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/signup_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.example.signup.ui.custom.CustomEditText
                android:id="@+id/username_custom_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customHint="@string/username"
                app:customIcon="@drawable/ic_person"
                app:customInputType="text"
                app:customMode="clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.signup.ui.custom.CustomEditText
                android:id="@+id/phone_custom_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customHint="@string/phone_number"
                app:customIcon="@drawable/ic_phone"
                app:customInputType="phoneNumber"
                app:customMode="clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_custom_et" />

            <com.example.signup.ui.custom.CustomEditText
                android:id="@+id/password_custom_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customHint="@string/password"
                app:customIcon="@drawable/ic_password"
                app:customInputType="password"
                app:customMode="hide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_custom_et" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{onClickListener}"
            android:padding="8dp"
            android:text="@string/join"
            android:textSize="20sp"
            app:backgroundTint="@color/blue"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target"
            android:layout_marginBottom="24dp"
            android:onClick="@{onClickListener}"
            android:padding="@dimen/touch_target_padding"
            android:text="@string/have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>